--- a/ngx-check-permission/package.json
+++ b/ngx-check-permission/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ngx-check-permission",
-  "version": "3.0.3",
+  "version": "3.0.4",
   "peerDependencies": {
     "@angular/common": "^15.2.0",
     "@angular/core": "^15.2.0"
@@ -16,6 +16,10 @@
   "homepage": "https://www.beforepost.com/package/ngx/ngx-check-permission",
   "description": "Angular library which checks the permission status and returns the permission status for the following api's .push, midi, camera, microphone, speaker, device-info, background-fetch, background-sync, bluetooth, persistent-storage, ambient-light-sensor, accelerometer, gyroscope, magnetometer, clipboard, display-capture, nfc",
   "icon": "https://icon.beforepost.com/W3EL2XBA-LM79Z0DG-4Y17OWY8.svg",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/manoj10101996/ngx-packages.git"
+  },
   "keywords": [
     "angular",
     "ngx",
