--- a/ngx-default-image/package.json
+++ b/ngx-default-image/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ngx-default-image",
-  "version": "0.2.6",
+  "version": "0.2.7",
   "peerDependencies": {
     "@angular/common": "^15.2.0",
     "@angular/core": "^15.2.0"
@@ -16,6 +16,10 @@
   "description": "Angular library which provides a way prevend image rendering when the image loading failed with custom replacement image and provide extracted meta info from the image.",
   "sideEffects": false,
   "homepage": "https://www.beforepost.com/package/ngx/ngx-default-image",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/manoj10101996/ngx-packages.git"
+  },
   "keywords": [
     "angular",
     "ngx",
