--- a/ngx-strings/package.json
+++ b/ngx-strings/package.json
@@ -5,7 +5,7 @@
     "email": "manoj1010196@gmail.com"
   },
   "description": "String operations for angular projects.",
-  "version": "3.0.3",
+  "version": "3.0.4",
   "peerDependencies": {
     "@angular/common": "^15.2.0",
     "@angular/core": "^15.2.0"
@@ -15,6 +15,10 @@
   },
   "homepage": "https://www.beforepost.com/package/ngx/ngx-strings",
   "icon": "https://icon.beforepost.com/LG8MMQ4V-O3IBIAKV-5J0WBZV2.svg",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/manoj10101996/ngx-packages.git"
+  },
   "keywords": [
     "angular",
     "ngx",
