--- a/ngx-toast-notify/package.json
+++ b/ngx-toast-notify/package.json
@@ -5,7 +5,7 @@
     "email": "manoj1010196@gmail.com"
   },
   "description": "Push notifications to your visitors with a toast, a lightweight and easily customizable alert message with custom theme based.",
-  "version": "3.0.3",
+  "version": "3.0.4",
   "peerDependencies": {
     "@angular/common": "^15.2.0",
     "@angular/core": "^15.2.0"
@@ -15,6 +15,10 @@
   },
   "homepage": "https://www.beforepost.com/package/ngx/ngx-toast-notify",
   "icon": "https://icon.beforepost.com/TAQMDH9I-2D87SQAT-7JIS54O8.svg",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/manoj10101996/ngx-packages.git"
+  },
   "keywords": [
     "angular",
     "material",
