--- a/ngx-color-palette/package.json
+++ b/ngx-color-palette/package.json
@@ -1,10 +1,11 @@
 {
   "name": "ngx-color-palette",
-  "version": "0.0.5",
+  "version": "0.0.7",
   "peerDependencies": {
     "@angular/common": "^15.2.0",
     "@angular/core": "^15.2.0"
   },
+  "description": "Angular library which provides color picker functionality to your angular application.",
   "dependencies": {
     "tslib": "^2.3.0"
   },
