--- a/ngx-tags-input-box/package.json
+++ b/ngx-tags-input-box/package.json
@@ -5,10 +5,10 @@
     "email": "manoj1010196@gmail.com"
   },
   "description": "A tags input is a UI component which allows the user to insert multiple entries as tags into an input field. Also known as Tagging/Tokenizing system. You can find this system on most major websites.",
-  "version": "3.1.0",
+  "version": "3.1.1",
   "peerDependencies": {
-    "@angular/common": "^15.2.0",
-    "@angular/core": "^15.2.0"
+    "@angular/common": "^17.0.9",
+    "@angular/core": "^17.0.9"
   },
   "dependencies": {
     "tslib": "^2.3.0"
@@ -37,11 +37,7 @@
     "uiconfig"
   ],
   "license": "MIT",
-  "module": "fesm2015/ngx-tags-input-box.mjs",
-  "es2020": "fesm2020/ngx-tags-input-box.mjs",
-  "esm2020": "esm2020/ngx-tags-input-box.mjs",
-  "fesm2020": "fesm2020/ngx-tags-input-box.mjs",
-  "fesm2015": "fesm2015/ngx-tags-input-box.mjs",
+  "module": "fesm2022/ngx-tags-input-box.mjs",
   "typings": "index.d.ts",
   "exports": {
     "./package.json": {
@@ -49,11 +45,9 @@
     },
     ".": {
       "types": "./index.d.ts",
-      "esm2020": "./esm2020/ngx-tags-input-box.mjs",
-      "es2020": "./fesm2020/ngx-tags-input-box.mjs",
-      "es2015": "./fesm2015/ngx-tags-input-box.mjs",
-      "node": "./fesm2015/ngx-tags-input-box.mjs",
-      "default": "./fesm2020/ngx-tags-input-box.mjs"
+      "esm2022": "./esm2022/ngx-tags-input-box.mjs",
+      "esm": "./esm2022/ngx-tags-input-box.mjs",
+      "default": "./fesm2022/ngx-tags-input-box.mjs"
     }
   },
   "sideEffects": false
