--- a/ngx-strings/package.json
+++ b/ngx-strings/package.json
@@ -5,10 +5,10 @@
     "email": "manoj1010196@gmail.com"
   },
   "description": "String operations for angular projects.",
-  "version": "3.0.4",
+  "version": "3.0.5",
   "peerDependencies": {
-    "@angular/common": "^15.2.0",
-    "@angular/core": "^15.2.0"
+    "@angular/common": "^17.0.9",
+    "@angular/core": "^17.0.9"
   },
   "dependencies": {
     "tslib": "^2.3.0"
@@ -44,11 +44,7 @@
     "uiconfig"
   ],
   "license": "MIT",
-  "module": "fesm2015/ngx-strings.mjs",
-  "es2020": "fesm2020/ngx-strings.mjs",
-  "esm2020": "esm2020/ngx-strings.mjs",
-  "fesm2020": "fesm2020/ngx-strings.mjs",
-  "fesm2015": "fesm2015/ngx-strings.mjs",
+  "module": "fesm2022/ngx-strings.mjs",
   "typings": "index.d.ts",
   "exports": {
     "./package.json": {
@@ -56,11 +52,9 @@
     },
     ".": {
       "types": "./index.d.ts",
-      "esm2020": "./esm2020/ngx-strings.mjs",
-      "es2020": "./fesm2020/ngx-strings.mjs",
-      "es2015": "./fesm2015/ngx-strings.mjs",
-      "node": "./fesm2015/ngx-strings.mjs",
-      "default": "./fesm2020/ngx-strings.mjs"
+      "esm2022": "./esm2022/ngx-strings.mjs",
+      "esm": "./esm2022/ngx-strings.mjs",
+      "default": "./fesm2022/ngx-strings.mjs"
     }
   },
   "sideEffects": false
