--- a/ngx-prime-color-picker/package.json
+++ b/ngx-prime-color-picker/package.json
@@ -1,11 +1,12 @@
 {
   "name": "ngx-prime-color-picker",
-  "version": "0.0.7",
+  "version": "0.0.10",
   "peerDependencies": {
     "@angular/common": "^17.3.0",
     "@angular/core": "^17.3.0"
   },
   "dependencies": {
+    "ngx-color-converter": "^3.0.9",
     "tslib": "^2.3.0"
   },
   "sideEffects": false,
