--- a/ngx-prime-color-picker/package.json
+++ b/ngx-prime-color-picker/package.json
@@ -1,6 +1,7 @@
 {
   "name": "ngx-prime-color-picker",
-  "version": "0.0.10",
+  "version": "0.0.11",
+  "description": "Our tool offers a vast palette of hues at your fingertips. Easily select the perfect color for your designs with precise controls and intuitive interface.",
   "peerDependencies": {
     "@angular/common": "^17.3.0",
     "@angular/core": "^17.3.0"
@@ -9,6 +10,62 @@
     "ngx-color-converter": "^3.0.9",
     "tslib": "^2.3.0"
   },
+  "homepage": "https://www.beforepost.com/package/ngx/ngx-prime-color-picker",
+  "icon": "https://github.com/manoj10101996/resources/blob/main/ngx-prime-color-picker.png?raw=true",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/manoj10101996/ngx-packages.git"
+  },
+  "keywords": [
+    "angular",
+    "ngx",
+    "color",
+    "rgb",
+    "red",
+    "green",
+    "blue",
+    "cyan",
+    "magenta",
+    "yellow",
+    "black",
+    "hue",
+    "saturation",
+    "lightness",
+    "blackness",
+    "rgba",
+    "hex",
+    "ngx-color-palette",
+    "ngx-prime-color-picker",
+    "color-converter",
+    "ncol",
+    "hsl",
+    "cymk",
+    "hsla",
+    "hslToRgb",
+    "hueToRgb",
+    "hwbToRgb",
+    "cmykToRgb",
+    "colord",
+    "color-palette",
+    "color-picker",
+    "colors",
+    "ncolToRgb",
+    "hueToNcol",
+    "ncsToRgb",
+    "rgbToHsl",
+    "rgbToHwb",
+    "rgbToCmyk",
+    "manoj10101996",
+    "uiconfig",
+    "colord",
+    "colors",
+    "color",
+    "colour",
+    "color-wheel",
+    "picker",
+    "color-picker"
+  ],
+  "license": "MIT",
   "sideEffects": false,
   "module": "fesm2022/ngx-prime-color-picker.mjs",
   "typings": "index.d.ts",
